# tobot-engine

./: .clang-format  .gitignore  .gitmodules  BuildFromSource.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  main.dox
.github/workflows/: build.yaml  build.yml  codeql.yaml  tests.yaml
assets/: Test_Framework_Architecture.drawio  tobot_architecture.drawio
cmake/: farscape_detect_platform.cmake  tobot_detect.cmake  tobot_detect_compiler.cmake  tobot_detect_platform.cmake
docs/: annotated.html  annotated_dup.js  asset__manager_8cpp.html  asset__manager_8h.html  asset__manager_8h_source.html  avl__tree_8h.html  avl__tree_8h_source.html  binary__search__tree_8h.html  binary__search__tree_8h_source.html  binary__tree__algorithms_8h.html  binary__tree__algorithms_8h.js  binary__tree__algorithms_8h_source.html  circle_8h.html  circle_8h_source.html  classTobot_1_1Core_1_1AssetManager.html  classTobot_1_1Core_1_1AssetManager.js  classTobot_1_1Core_1_1ExitCode.html  classTobot_1_1Core_1_1ExitCode.js  classTobot_1_1Core_1_1GameEntity.html  classTobot_1_1Core_1_1GameEntity.js  classTobot_1_1Core_1_1Layer.html  classTobot_1_1Core_1_1Layer.js  classTobot_1_1Core_1_1RenderObject.html  classTobot_1_1Core_1_1RenderObject.js  classTobot_1_1Core_1_1Scene.html  classTobot_1_1Core_1_1Scene.js  classTobot_1_1Core_1_1SceneManager.html  classTobot_1_1Core_1_1SceneManager.js  classTobot_1_1Core_1_1TobotApplication.html  classTobot_1_1Core_1_1TobotApplication.js  classTobot_1_1Core_1_1Transform2D.html  classTobot_1_1Core_1_1Transform2D.js  classTobot_1_1DataStructures_1_1Tree_1_1AVLTree.html  classTobot_1_1DataStructures_1_1Tree_1_1AVLTree.js  classTobot_1_1DataStructures_1_1Tree_1_1RedBlackTree.html  classTobot_1_1DataStructures_1_1Tree_1_1RedBlackTree.js  classTobot_1_1DataStructures_1_1Tree_1_1RedBlackTree_1_1iterator.html  classTobot_1_1DataStructures_1_1Tree_1_1RedBlackTree_1_1iterator.js  classTobot_1_1DataStructures_1_1Tree_1_1Tree.html  classTobot_1_1DataStructures_1_1Tree_1_1Tree.js  (+513 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+92 more)
docs/tobot_core/: annotated.html  annotated_dup.js  asset__manager_8cpp.html  asset__manager_8h.html  asset__manager_8h.js  asset__manager_8h_source.html  class_tobot_1_1_core_1_1_asset_manager.html  class_tobot_1_1_core_1_1_asset_manager.js  (+81 more)
editor/: CMakeLists.txt  README.md  color_picker.cpp  color_picker.hpp  dockspace.cpp  dockspace.h  dockspace.hpp  event_handler.cpp  event_handler.h  event_handler.hpp  icons_material_design.h  icons_material_design.hpp  main.cpp  menu_bar.cpp  menu_bar.h  menu_bar.hpp  scene_renderer.cpp  scene_renderer.h  scene_renderer.hpp  toolbar.cpp  toolbar.h  toolbar.hpp
example/: CMakeLists.txt  example.cpp
example/src/: CMakeLists.txt  example.cpp
example/test/: CMakeLists.txt  example.cpp
scripts/: README.md  build.lua  create_library.lua  delete_logs.bat  delete_logs.lua  docs.bat  docs.lua  docs.sh  docs_all.bat  docs_core.bat  docs_core.sh  docs_math.bat  docs_math.sh  docs_tooling.bat  docs_tooling.sh  format.bat  format.lua  install_dependencies.lua
src/: CMakeLists.txt  Doxyfile  entry_point.h  logger.hpp  main.cpp  main.dox  project_config.h.in  tobot.h
src/core/: asset_manager.cpp  asset_manager.h  farscape_application.cpp  farscape_application.h  game_entity.cpp  game_entity.h  render_object.cpp  render_object.h  scene.cpp  scene.h  scene_manager.h  tobot_application.cpp  tobot_application.h  view.cpp  view.h
src/edl/: edl_initializer.cpp  edl_initializer.h
src/include/: tobot.h
src/math/: dimension.h  vector2d.h
src/utilities/: concepts.h  logger.cpp  logger.h  logger.hpp  tobot_asserts.h  tobot_asserts.hpp
src/widget/: text.h
tests/: CMakeLists.txt
tests/math/: vector2d_test.cpp
tobot/: CMakeLists.txt  README.md
tobot/tobot_core/: README.md
tobot/tobot_core/src/: CMakeLists.txt  asset_manager.cpp  entry_point.hpp  exitcode.cpp  game_entity.hpp  layer.cpp  layer.hpp  project_config.hpp.in  scene_manager.cpp  string_hash.hpp  sub_system_manager.cpp  tobot_application.cpp  tobot_application.hpp  tobot_texture.cpp  transform2D.cpp
tobot/tobot_core/src/include/: tobot_engine.hpp
tobot/tobot_data_structures/: CMakeLists.txt
tobot/tobot_data_structures/src/: CMakeLists.txt  pre_compiled_header.cpp  pre_compiled_header.hpp
tobot/tobot_data_structures/src/graph/: directed_graph.hpp  undirected_graph.hpp
tobot/tobot_data_structures/src/include/: tobot_data_structures.hpp
tobot/tobot_data_structures/src/tree/: binary_tree_algorithms.hpp  red_black_tree.hpp  tree.hpp  tree_node.hpp
tobot/tobot_data_structures/test/: CMakeLists.txt  directed_graph_test.cpp  enum_test.cpp  graph_test.cpp  red_black_tree_test.cpp  tree_node_test.cpp  tree_test.cpp
tobot/tobot_lang/: CMakeLists.txt  Readme.md
tobot/tobot_lang/src/: CMakeLists.txt  lexer.hpp  tokenization_rule.hpp
tobot/tobot_lang/src/include/: tobot_lang.hpp
tobot/tobot_lang/test/: CMakeLists.txt  lexer_test.cpp
tobot/tobot_math/: CMakeLists.txt  README.md
tobot/tobot_math/src/: CMakeLists.txt  concepts.hpp  dimension.hpp  gradient2D.hpp  plane.hpp
tobot/tobot_math/src/shape/: polygon.hpp  triangle.hpp
tobot/tobot_math/src/vector/: vector2d.hpp
tobot/tobot_math/tests/: CMakeLists.txt  gradient_test.cpp  matrix_test.cpp  plane_test.cpp  rectangle_test.cpp  vector2d_test.cpp
tobot/tobot_tooling/: CMakeLists.txt
tobot/tobot_tooling/src/: CMakeLists.txt  pre_compiled_header.hpp
tobot/tobot_tooling/src/console/: console_style.hpp
tobot/tobot_tooling/src/include/: tobot_tooling.hpp
tobot/tobot_tooling/src/logging/: logger.cpp  logger.hpp
tobot/tobot_tooling/src/path/: path_utils.cpp
(+817 files in other folders)
